[gd_scene load_steps=5 format=3 uid="uid://be0ccrju4boel"]

[ext_resource type="Script" uid="uid://156vgglvxece" path="res://resources/scripts/balloon.gd" id="1_1b2cl"]
[ext_resource type="Resource" uid="uid://b513qahxwlfgp" path="res://resources/dialogue/dialogue.dialogue" id="2_dnwfd"]
[ext_resource type="PackedScene" uid="uid://bbqcd2h3oeb6u" path="res://resources/scenes/dialogue_box.tscn" id="3_7nm4f"]

[sub_resource type="Theme" id="Theme_4emby"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("1_1b2cl")
dialogue_resource = ExtResource("2_dnwfd")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 644.0

[node name="ColorRect" type="ColorRect" parent="Margin"]
layout_mode = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Margin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="Content" type="VBoxContainer" parent="Margin/HBoxContainer/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = SubResource("Theme_4emby")

[node name="DialogueBox" parent="Margin/HBoxContainer/Scroll/Content" instance=ExtResource("3_7nm4f")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
mouse_filter = 0

[node name="VScrollBar" type="VScrollBar" parent="Margin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChosenResponse" type="Button" parent="."]
layout_mode = 2
offset_left = 1252.0
offset_top = 196.0
offset_right = 1439.0
offset_bottom = 230.0
text = "Response example"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="Margin/HBoxContainer/Scroll/Content/DialogueBox" to="." method="_on_dialogue_box_gui_input"]
